fix portfolio title

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
     <section id="portfolio">
         <!-- title -->
         <div class="title">
-            <h1 class="title-text">Portfolio</h1>
-            <div class="title-underline"></div>
+            <h1 class="title-text portfolio">Portfolio</h1>
+            <div class="title-underline line"></div>
         </div>
         <!-- end title -->
         <div class="portfolio-center">
